--- a/web/templates/css/homework_5.html
+++ b/web/templates/css/homework_5.html
@@ -19,7 +19,7 @@
             width: 100px;
             height: 100px;
             padding: 10px;
-            margin: 10px;
+            /* margin: 10px; */
             background-color: blue;
             color: white;
         }
